# taharut

./: .gitignore  Cargo.toml  flake.nix
nix/: home-manager.nix
src/: cli.rs  lib.rs  main.rs
