[package]
name = "taharut"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = { version = "0.11.2", default-features = false, features = ["color", "auto-color", "humantime"] }
log = "0.4.20"
notify-rust = { version = "4.10.0", default-features = false, features = ["zbus", "serde"] }
regex = "1.10.3"
ureq = { version = "2.9.6", default-features = false, features = ["tls", "charset"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
